[package]
name = "wp-hooks-rs"
version = "0.1.0"
edition = "2024"
description = "Rust port of @wordpress/hooks — addFilter, addAction, applyFilters, doAction for building extensible WordPress-style Rust tools"
license = "GPL-2.0-or-later"
repository = "https://github.com/wp-rust/wp-hooks-rs"
homepage = "https://github.com/wp-rust/wp-hooks-rs"
documentation = "https://docs.rs/wp-hooks-rs"
keywords = ["wordpress", "hooks", "filters", "actions", "plugin"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# no external deps — pure std
